# smack

./: .gitignore  README.md  pyproject.toml
examples/: 0_INTRO.md  1_TABLES.md  2_PLOTS.md  3_FIGURES.md  4_TYPOGRAPHY.md
smack/: __main__.py  host.py  mdit.py  presentation.py  rich.py
